# lucyd

./: .dockerignore  .env.example  .gitignore  Dockerfile  GROWERS.md  LICENSE  README.md  agentic.py  api.py  async_utils.py  attachments.py  bridge_client.py  config.py  consolidation.py  context.py  conversion.py  db.py  evolution.py  guardrails.py  hooks.py  log_utils.py  lucyd.py  lucyd.service.example  lucyd.toml.example  maintain_state.py  memory.py  memory_schema.py  messages.py  metering.py  metrics.py  models.py  monitor.py  operations.py  pipeline.py  plugins.py  pyproject.toml  relay.py  requirements.txt  session.py  skills.py  (+3 more)
.githooks/: pre-commit
audit/: 0-FULL-AUDIT.md  1-STATIC-ANALYSIS.md  2-TEST-SUITE.md  3-MUTATION-TESTING.md  4-ORCHESTRATOR-TESTING.md  5-DEPENDENCY-CHAIN.md  6-SECURITY-AUDIT.md  7-DOCUMENTATION-AUDIT.md  8-BUG-FIX-WORKFLOW.md  LAST_AUDIT.md  PATTERN.md
channels/: __init__.py  bridge_outbound_server.py  cli.py  email.py  email.toml.example  http_api.py  telegram.py  telegram.toml.example
deploy/: entrypoint.sh
docs/: architecture.md  configuration.md  diagrams.md  operations.md  plugins.md
plugins.d/: elevenlabs.py  elevenlabs.toml.example  mistral_stt.py  mistral_stt.toml.example  mistral_tts.py  mistral_tts.toml.example  stt.py  tts.py  whisper.py  whisper.toml.example
providers/: __init__.py  _openai_wire.py  anthropic.py  anthropic_compat.py  mistral.py  openai.py  openai_compat.py  smoke_local.py
providers.d/: anthropic.toml.example  mistral.toml.example  openai.toml.example  vision.toml.example
schema/: 001_initial.sql  002_drop_multitenant_columns.sql  003_drop_commitments.sql
tests/: conftest.py  test_agentic.py  test_agents.py  test_api.py  test_audit_agnostic.py  test_bridge_client.py  test_build_recall.py  test_config.py  test_config_schema_coverage.py  test_consolidation.py  test_context.py  test_conversation_replay.py  test_conversion.py  test_cost.py  test_daemon_helpers.py  test_daemon_integration.py  test_docker_smoke.sh  test_e2e.py  test_elevenlabs.py  test_email.py  test_evolution.py  test_filesystem.py  test_fix_plan.py  test_function_tool.py  test_gdpr.py  test_guardrails.py  test_hooks.py  test_http_api.py  test_inbound_bridge_fallback.py  test_indexer.py  test_integration_envelope.py  test_log_utils.py  test_lucyd_send.py  test_lucydctl.py  test_maintain.py  test_memory.py  test_memory_tools_structured.py  test_messaging.py  test_metering.py  test_metrics_observability.py  (+34 more)
tools/: __init__.py  agents.py  filesystem.py  (+16 more)
(+20 files in other folders)
